fix uneven divs

--- a/weather-app/src/main.css
+++ b/weather-app/src/main.css
@@ -14,10 +14,6 @@ body {
   display: flex;
   flex-direction: column;
 }
-
-.main-container {
-  width: 49vw;
-}
 .main-group {
   display: flex;
 }
